css changes to fix product listing on mobile

--- a/blocks/v2-pencil-promo/v2-pencil-promo.css
+++ b/blocks/v2-pencil-promo/v2-pencil-promo.css
@@ -91,13 +91,14 @@
 
 .v2-pencil-promo__pencil-banner .icon {
   height: 24px;
+  width: 24px;
 }
 
 .v2-pencil-promo__pencil-banner .icon svg {
   --color-icon: var(--text-color);
 
   position: absolute;
-  margin-left: 10px;
+  margin-right: 10px;
   width: 24px;
   height: 24px;
 }
